Đã làm xong dự án

--- a/QL_NhanSu/QL_NhanSu.csproj
+++ b/QL_NhanSu/QL_NhanSu.csproj
@@ -56,8 +56,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DAO\DuAnDAO.cs" />
     <Compile Include="DAO\NhanVienDAO.cs" />
     <Compile Include="DAO\TangCaDAO.cs" />
+    <Compile Include="DTO\DuAnDTO.cs" />
     <Compile Include="DTO\MaNV_DTO.cs" />
     <Compile Include="DTO\MaPB_DTO.cs" />
     <Compile Include="DTO\NhanVienDTO.cs" />
