--- a/QL_NhanSu/QL_NhanSu.csproj
+++ b/QL_NhanSu/QL_NhanSu.csproj
@@ -58,10 +58,12 @@
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\NhanVienDAO.cs" />
     <Compile Include="DAO\TangCaDAO.cs" />
+    <Compile Include="DAO\ThanNhan_DAO.cs" />
     <Compile Include="DTO\MaNV_DTO.cs" />
     <Compile Include="DTO\MaPB_DTO.cs" />
     <Compile Include="DTO\NhanVienDTO.cs" />
     <Compile Include="DTO\TangCaDTO.cs" />
+    <Compile Include="DTO\ThanNhan_DTO.cs" />
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
