full chức năng trả lương

--- a/QL_NhanSu/QL_NhanSu.csproj
+++ b/QL_NhanSu/QL_NhanSu.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DAO\PhongBanDAO.cs" />
     <Compile Include="DAO\TangCaDAO.cs" />
     <Compile Include="DAO\ThanNhan_DAO.cs" />
+    <Compile Include="DAO\TraLuongDAO.cs" />
     <Compile Include="DTO\DuAnDTO.cs" />
     <Compile Include="DTO\MaNV_DTO.cs" />
     <Compile Include="DTO\MaPB_DTO.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="DTO\PhongBanDTO.cs" />
     <Compile Include="DTO\TangCaDTO.cs" />
     <Compile Include="DTO\ThanNhan_DTO.cs" />
+    <Compile Include="DTO\TraLuong_DTO.cs" />
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
